Fix: Eliminar espacio superior en el header y ajustar imagen de fondo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <script>
     // Lista de nombres de usuario válidos
-    const validUsernames = ['Teffi','Luna','Asya','Jennifer','Genesis','Vale','Annie','Eliana','Eli','Elizabeth','Gise','Eunny', 'Aidan', 'Ainel', 'Ale', 'Alice', 'Aliz','Maju','Aylin','Ceci','Crisbel','Danny','Gigi','Heiny','Kari','Kim','Koteiza','Lady','Lau','Lexxie','Mar','Mari','Naru','Rayra','Riva','Sally','Sol','Yahaira','Yess','Yet','Zoe']; // Añade los nombres que desees
+    const validUsernames = ['Teffi','Luna','Asya','Jennifer','Genesis','Vale','Annie','Eliana','Eli','Elizabeth','Gise','Eunny', 'Aidan', 'Ainel', 'Ale', 'Alice', 'Aliz','Maju','Aylin','Ceci','Crisbel','Danny','Gigi','Heiny','Kari','Kim','Koteiza','Lady','Lau','Lexxie','Mar','Mari','Naru','Rayra','Riva','Sally','Sol','Yahaira','Yuan','Yess','Yet','Zoe']; // Añade los nombres que desees
     const form = document.getElementById('loginForm');
     const usernameInput = document.getElementById('username');
     const errorMessage = document.getElementById('errorMessage');
